# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.13.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Extend the manpage concerning the description of expressions, see
	  http://bugs.gentoo.org/show_bug.cgi?id=229625
	- Fix buggy want_slash=false in normalize_path(), see
	  http://bugs.gentoo.org/show_bug.cgi?id=230341
	- Do not demand canonicalize_file_name() or realpath():
	  The profile reading should even work without symlink resolving.

*eix-0.13.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix defaults for FORMATLINE_PACKAGESETS, see
	  http://bugs.gentoo.org/show_bug.cgi?id=229355
	- Fix broken replacement update-eix-functions.sh path and a bug in
	  normalize_path(), see http://bugs.gentoo.org/show_bug.cgi?id=229419

*eix-0.13.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support for package sets.
	- Support for world file. You need execute permissions for
	  /var/lib/portage or set SAVE_WORLD=true and run update-eix with
	  such permissions to make use of this feature.
	- Introduce --installed-slot, MATCH_IF_*SLOT
	- The new defaults for eix-sync now neither call emerge --metadata
	  nor clean /var/cache/edb. You might want to set up an appropriate
	  /etc/eix-sync.conf with previous defaults if you use a cache method
	  depending on this like "portage-2.1" (most users are not affected).
	  See the manpage and eix-sync -h for details. See the discussion in
	  http://bugs.gentoo.org/show_bug.cgi?id=202535
	- Allow "!!" lines in eix-sync to override environment variables like
	  FORCE_USECOLORS, see http://bugs.gentoo.org/show_bug.cgi?id=225963
	- Treat /etc/make.profile with normalize_path(). This should fix
	  http://bugs.gentoo.org/show_bug.cgi?id=229091
	- Fix treatment of "-" in slotnames.
	  Thanks to Edward "Hades" <edward.hades at gmail.com> for the patch,
	  see http://bugs.gentoo.org/show_bug.cgi?id=225773
	- Fix PATH_MAX headers on FreeBSD-7. Thanks to